2008-06-07  Paul Smith  <psmith@gnu.org>

	** Fix for bug #532844

	* mail/mail-stub-exchange.c (get_message): If it's a bad case we can 
	just goto the error handling code instead of trying to process the 
	response.

2008-05-26  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.22.2 release.

2008-05-26  Johnny Jacob  <jjohnny@novell.com>

	** Fix for Bug #533422
	
	* storage/Makefile.am (EXTRA_DIST): server_DATA should not
	be packed in dist tarballs.
	
2008-05-20  Chenthill Palanisamy  <pchenthill@novell.com>

	Downstream fix for bug #203481 (bnc)
	* calendar/e-cal-backend-exchange-tasks.c: (receive_task_objects): Fix the
	conflict in local variables.									   

2008-05-23  Øystein Gisnås  <oystein@gisnas.net>

	** Fix for bug #366250

	* configure.in: Don't compile/package semi-free RFCs and other IETF 
	documents that are easily accessible on the web. 

2008-05-13  Matthew Barnes  <mbarnes@redhat.com>

	** Fix for bug #523023

	* storage/exchange-storage.c: (account_new_folder): Another leak fix.
	

2008-05-02  Johnny Jacob <jjohnny@novell.com>

	* NEWS, Configure.in : Evolution Exchange 2.22.1.1 release.

2008-05-02  Suman Manjunath  <msuman@novell.com>

	* calendar/e-cal-backend-exchange.c: (open_calendar):
	Set account mode to 'ONLINE_MODE' before attempting to connect.

2008-05-02  Bharath Acharya  <abharath@novell.com>

	Fixes #358706 (bnc)

	* camel/camel-exchange-store.c: 
	(update_camel_stub): Updates the camel stub value
	(exchange_connect): 
	(exchange_disconnect): Reset the stub so that reconnect happens sanely.
	* mail/mail-stub-listener.h: Store the stub value in the listener so 
	that we can use the folders_by_name (hash table) later.
	* storage/exchange-component.c: 
	(impl_setLineStatus):
	(new_connection): Update the hash table for the new stub

2008-04-07  Srinivasa Ragavan <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.22.1 release.

2008-03-27  Milan Crha  <mcrha@redhat.com>
