@@ -1,3 +1,13 @@
+2008-06-13  Milan Crha  <mcrha@redhat.com>
+
+	** Fix for bug #402752
+
+	* calendar/e-cal-backend-exchange.c: (get_exchange_comp),
+	(e_cal_backend_exchange_add_object),
+	(e_cal_backend_exchange_modify_object):
+	* calendar/e-cal-backend-exchange-calendar.c: (add_ical):
+	Prevent crash when got a component without set UID.
+
 2008-06-07  Paul Smith  <psmith@gnu.org>
 
 	** Fix for bug #532844
